<resources>
    <string name="app_name">NoteApp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dontHaveAccount">Don`t have account</string>
    <string name="signUp">Sign Up</string>
    <string name="createAccountTitle">Create account</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="HaveAccount">Already have an account?</string>
    <string name="signIn">Sign In</string>
    <string name="logout">Logout</string>
    <string name="viewMode">Switch view mode</string>
    <string name="registerSuccessfully">Register Successfully</string>
    <string name="errorRegister">Email address is already registered</string>
    <string name="UserCreatedSuccessfully">User Created Successfully</string>
    <string name="addNote">New note</string>
    <string name="title_activity_note_map_page">NoteMapPage</string>
    <string name="newNote">New Note</string>
    <string name="creationDate">Creation Date:</string>
    <string name="noteTitle">Title:</string>
    <string name="enterNoteTitle">Enter note title</string>
    <string name="body">Body:</string>
    <string name="enter_body">Enter your body</string>
    <string name="save">Save</string>
    <string name="title_activity_list_note_page">ListNotePage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="successfullySaved">Note successfully saved</string>
    <string name="errorSave">Error in saving Note</string>
    <string name="delete">Delete</string>
    <string name="localDb">localDB</string>
    <string name="successfullyDeleted">Successfully deleted</string>
    <string name="LocalDb">LocalDb</string>
    <string name="NoNotes">You does`t have note, add one</string>
    <string name="MapAlert">Pay attention, notes created without location permission will not appear on the map</string>

</resources>