<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNote">


    <LinearLayout
        android:id="@+id/LL_topNewNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newNote"
            android:layout_weight="10"
            android:gravity="center"
            android:textColor="@color/appBlue"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_centerNewNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/LL_topNewNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/LL_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Tv_creation_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creationDate"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/Tv_creation_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creationDate"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Tv_noteTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noteTitle"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/ET_titleValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/enterNoteTitle"
                android:maxLines="1"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Tv_bodyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/ET_bodyValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/enter_body"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BtnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:background="@drawable/btn_template"
            android:text="@string/save"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BtnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/btn_template"
            android:text="@string/delete"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>



    </RelativeLayout>


