<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003">

    <TextView
        android:id="@+id/Tv_titleItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noteTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Tv_dateItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creationDate"
                android:layout_weight="5"
                android:textSize="16sp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/Tv_bodyItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:textSize="16sp"
            android:layout_weight="2"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>